deploy/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: middleoffice-gateway
  namespace: middleoffice
spec:
  selector:
    istio: ingressgateway # utilisation du controleur istio par défaut
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
