deploy/istio-gateway/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mo-ux-portal-destinationrule
  namespace: middleoffice
spec:
  host: mo-ux-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
