deploy/istio-gateway/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleoffice-virtualservice
  namespace: middleoffice
spec:
  hosts:
  - "portal.middleoffice.k8s.lab"
  gateways:
  - middleoffice-gateway
  http:
  - match:
    - uri:
        exact: "/" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 80 
  - match:
    - uri:
        exact: "/api/requests" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 81 
  - match:
    - uri:
        exact: "/api/requesttypes" 
    - uri:
        exact: "/api/requesttypes/{code}"
    route:
    - destination:
        host: mo-api-service 
        port:
          number: 80 
  - match:
    - uri:
        exact: "/api/requests/{id:[0-9a-z]+}/vote" 
    route:
    - destination:
        host: mo-api-service 
        port:
          number: 82 
  - match:
    - uri:
        exact: "/api/requests/{id:[0-9a-z]+}" 
    route:
    - destination:
        host: mo-api-service 
        port:
          number: 81 
  - match:
    - uri:
        exact: "/api/ux/request" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 81 
  - match:
    - uri:
        exact: "/api/ux/requests" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 83 
  - match:
    - uri:
        exact: "/api/ux/requesttype" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 84 
  - match:
    - uri:
        exact: "/api/ux/requests/{id:[0-9a-z]+}/vote" 
    route:
    - destination:
        host: mo-ux-service 
        port:
          number: 82
